10/28/11 Added messages for sim name, version etc. on sim startup
10/27/11 Added message when active module changes
10/27/11 Moved sim start time tracking to PhetApplicationLauncher
10/24/11 Moved ItemList.foldLeft to ObservableList
10/18/11 Added JME-related strings
10/11/11 add ISimInfo.hasCommonLineArg
10/4/11 Moved ColorDialogMenuItem to common as recommended in #3090
9/23/11 #3046, rename ImmutableVector2D.createPolar
9/9/11 Added ValueEquals.or
9/6/11 Added classes to support simsharing
9/6/11 Added ImmutableVector2D.toDimension
8/30/11 Added convenience ImmutableVector2D methods to DoubleGeneralPath
8/24/11 added PhetPCanvas.addBoundsNode(Dimension2D) for debugging transform strategies, especially useful with CenteredStage
8/20/11 Rewrote ImmutableVector2D.getDistance to run faster, this single change reduces application time from 15% to 1% in sugar-and-salt-solutions WaterModel as determined by jprofiler
8/16/11 Fixed implementation of SettableNot and added improved tests, see #3045
8/12/11 added Arrow.getHeadScale, see #3039
8/3/11 Removed NotImplementedException and implemented ObservableList.retainAll, see #3033
8/2/11 Renamed ListenerList -> ObserverList, bug fixes in ObservableList
8/2/11 Fixed: notifyImmediately flag ignored in ObservableList
8/2/11 Moved ObservableList to phet common
8/2/11 Generified ModuleManager.modules from ArrayList to ArrayList<Module> and removed unnecessary casts
7/20/11 Renamed static creation method Property.value to Property.property
7/19/11 Added a convenience static factory method to Property
7/8/11 #3000, fix seam in IntensitySlider
6/25/11 Automatically update the ConstantDTClock in SimSpeedControl instead of duplicating listener code in many places, see #2798
6/23/11 Added MathUtil.clamp(int,int,int)
6/9/11 #2936, added MathUtil.clamp(double,DoubleRange)
6/7/11 Moved Dimension2DDouble to be a top-level class, see #123
6/7/11 Added docs to ModelViewTransform, see #123